--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img src="assets/img/Logo.svg">
         </div>
         <div class="logo">
-            <p>Equipment</p>
-            <p>About Us</p>
+            <p style="margin-right: 20px;">Equipment</p>
+            <p style="margin-right: 20px;">About Us</p>
             <p>Blog</p>
         </div>
         <div class="account">
@@ -39,24 +39,40 @@
     <div class="man">
         <img src="assets/img/VG.png"
     </div>
+    <div class="headline">
+        <div class="part1">
+            <img src="assets/img/Rectangle 2.1.svg">
+            <p style="color:#FBD784;margin-left: 20px;">A HIKING GUIDE</p>
+        </div>
+        <div class="part2">
+            <p style="font-size: 90px;">Be Prepared For The</p>
+            <p style="font-size: 85px; margin-top: -65px;">Mountains And Beyond!</p>
+        </div>
+        <div class="part3">
+            <p style="margin-right: 20px;">scroll down</p>
+            <img src="assets/img/arrow_downward_24px.svg">
+        </div>
+    </div>
     <main>
         <div class="bg_hero2">
 
         </div>
         <div class="box1">
+            <div class="number1">
+                <img src="assets/img/Equipment.png">
+            </div>
             <div class="box1_text">
                 <div class="box1_text_small_heading"> 
-                    <img src="assets/img/Line.svg" style="float:left"><p style="color:#FBD784">GET STARTED</p>
+                    <div class="header_text1">
+                    <img src="assets/img/Line.svg" style="margin-top:11px; float:left; margin-right: 20px;"><p style="color:#FBD784;">GET STARTED</p>
+                </div>  
                     <h1>What level of hiker are you?</h1>
                     <p>Determining what level of hiker you are can be an important tool when</p>
                     <p>planning future hikes. This hiking level guide will help you plan hikes</p>
                     <p>according to different hike ratings set by various websites like All Trails and</p> 
                     <p>Modern Hiker. What type of hiker are you – novice, moderate, advanced</p> 
                     <p>moderate, expert, or expert backpacker?</p>
-                    <a style="color:#FBD784">read more<img src="assets/img/arrow_downward_24px.png"></a>
-                    <div class="number1">
-                        <img src="assets/img/Equipment.png">
-                    </div>
+                    <p style="color:#FBD784">read more</p><img src="assets/img/arrow_downward_24px.png" style="margin-top:11px;">
                 </div>
             </div>
             <div class="box1_image">
@@ -69,7 +85,9 @@
             </div>
             <div class="box2_text">
                 <div class="box2_text_small_heading"> 
-                <img src="assets/img/Line.svg" style="float:left"><p style="color:#FBD784">HIKING ESSENTIALS</p>
+                    <div class="part1">
+                <img src="assets/img/Line.svg" style="float:right"><p style="color:#FBD784">HIKING ESSENTIALS</p>
+                    </div>
                 <h1>Picking the right Hiking Gear!</h1>
                 <p>The nice thing about beginning hiking is that you don’t really need any</p>
                 <p>special gear, you can probably get away with things you already have.</p>
@@ -104,6 +122,29 @@
             </div>
         </div>
     </main>
-    <div class="footer"
+    <div class="footer">
+        <div class="footer_text1">
+            <img src="assets/img/LogoFooter.svg">
+            <p>Get out there & discover your next</p>
+            <p>slope, mountain & destination!</p>
+            <p style="margin-top: 100px;color:#a9a9a9a9">Copyright 2019 MNTN, Inc. Terms & Privacy</p>
+        </div>
+        <div class="footer_text2and3">
+        <div class="footer_text2">
+            <h1 style="color:#FBD784;font-size: 24px;">More on The Blog</h1>
+            <p style="font-weight: normal;">About MNTN</p>
+            <p style="font-weight: normal;">Contributors & Writers</p>
+            <p style="font-weight: normal;">Write For Us</p>
+            <p style="font-weight: normal;">Contact Us</p>
+            <p style="font-weight: normal;">Privacy Policy</p>
+        </div>
+        <div class="footer_text3">
+            <h1 style="color:#FBD784;font-size: 24px;">More on MNTN</h1>
+            <p style="font-weight: normal;">The Team</p>
+            <p style="font-weight: normal;">Jobs</p>
+            <p style="font-weight: normal;">Press</p>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
